--- a/index.html
+++ b/index.html
@@ -2,3 +2,17 @@
 layout: home
 # Index page
 ---
+<head>
+  ...
+  <link rel="stylesheet" href="assets/css/glslEditor.css">
+  ...
+</head>
+<body>
+<div id="glsl-editor-container"></div>
+<script src="assets/js/glslEditor.js"></script>
+<script>
+  // 初始化GLSL编辑器
+  const editor = new glslEditor('#glsl-editor-container');
+</script>
+...
+</body>
