--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 layout: home
 # Index page
 ---
-<head>
-  ...
-  <link rel="stylesheet" href="assets/css/glslEditor.css">
-  ...
-</head>
+<link type="text/css" rel="stylesheet" href="/path/to/glslEditor.css">
+<script type="application/javascript" src="/path/to/glslEditor.js"></script>
 <body>
-<div id="glsl-editor-container"></div>
-<script src="assets/js/glslEditor.js"></script>
-<script>
-  // 初始化GLSL编辑器
-  const editor = new glslEditor('#glsl-editor-container');
-</script>
-...
+<div id="glsl_editor"></div>
 </body>
+<script type="text/javascript">
+  const glslEditor = new GlslEditor('#glsl_editor', {
+    canvas_size: 500,
+    canvas_draggable: true,
+    theme: 'monokai',
+    multipleBuffers: true,
+    watchHash: true,
+    fileDrops: true,
+    menu: true
+  });
+</script>
