--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: home
 # Index page
 ---
+<script src="assets/js/glslEditor.js"></script>
+<script src="assets/css/glslEditor.css"></script>
 <link type="text/css" rel="stylesheet" href="/path/to/glslEditor.css">
 <script type="application/javascript" src="/path/to/glslEditor.js"></script>
 <body>
